themes/defaults/servarr-base.css
/* ... */
body {
    background: var(--main-bg-color);
    background-repeat: repeat, no-repeat;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-size: auto, cover;
    -webkit-background-size: auto, cover;
    -moz-background-size: auto, cover;
    -o-background-size: auto, cover;
    color: var(--text);
}

*::-webkit-scrollbar-thumb,
[class*="-thumb-"]:not([class*="QualityDefinition-thumb-"]) {
    background-color: var(--transparency-light-25) !important;
}
*::-webkit-scrollbar-thumb:hover,
[class*="-thumb-"]:hover:not([class*="QualityDefinition-thumb-"]) {
    background-color: var(--transparency-light-35) !important;
}

/* Froms */

[class*="FormInputHelpText-helpText-"] {
    color: var(--text);
}

[class*="FormInputGroup-inputUnit-"] {
    color: var(--text) !important;
}

/* LINKS */
[class*="Link-to-"]:not([class*="PageSidebarItem-link-"]):not([class*="Button-"]):not([class*="AgendaEvent"]):not([class*="PageHeader-"]) {
    color: var(--link-color);   
   }
   
[class*="Link-to-"]:not([class*="PageSidebarItem-link-"]):hover:not([class*="Button-"]):hover{
color: var(--link-color-hover);   
}

[class*="PageHeader-donate-"]:hover {
    color: #9c1f30 !important;
}

[class*="PageHeaderActionsMenu-menuButton-"]:hover {
    color: var(--link-color-hover);
}

a {
    color: var(--link-color);
}

a:hover {
    color: var(--link-color-hover);
}

[class*="TableRowCell-cell-"] [class*="Link-to-"] {
    color: var(--link-color) !important;
}

[class*="TableRowCell-cell-"] [class*="Link-to-"]:hover {
    color: var(--link-color-hover) !important;
}

/* Buttons */

[class*="Button-default-"] {
    color: var(--button-text);
    background-color: var(--button-color);
    border-color: transparent;
}

[class*="Button-default-"]:hover {
    border-color: transparent;
    background-color: var(--button-color-hover) !important;
    color: var(--button-text-hover);
}

[class*="Button-primary-"] {
    border-color: transparent;
    background-color: var(--button-color);
    color: var(--button-text);
}

[class*="Button-primary-"]:hover {
    border-color: transparent;
    background-color: var(--button-color-hover) !important;
    color: var(--button-text-hover);
}

[class*="Button-success-"] {
    border-color: var(--button-color);
    background-color: var(--button-color);
    color: var(--button-text);
}

[class*="Button-success-"]:hover {
    border-color: var(--button-color-hover);
    background-color: var(--button-color-hover);
    color: var(--button-text-hover);
}

/* LOADING PAGE */
[class*="ErrorPage-page-"],
[class*="ErrorPage-version-"],
[class*="LoadingMessage-loadingMessage-"] {
    color: var(--text);
}

[class*="LoadingIndicator-ripple-"] {
    border: 2px solid var(--text-hover);
}

[class*="LoadingPage-page-"] {
    background: var(--main-bg-color);
    background-repeat: repeat, no-repeat;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-size: auto, cover;
    -webkit-background-size: auto, cover;
    -moz-background-size: auto, cover;
    -o-background-size: auto, cover;
}

/* MODAL */
[class*="ModalHeader-modalHeader-"] {
    background: var(--modal-header-color);
    background-repeat: repeat, no-repeat;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-size: auto, cover;
    -webkit-background-size: auto, cover;
    -moz-background-size: auto, cover;
    -o-background-size: auto, cover;
    color: var(--text-hover);
    border-bottom: 1px solid rgb(var(--accent-color));
}

[class*="ModalContent-modalContent-"] {
    background: var(--modal-bg-color);
    background-repeat: repeat, no-repeat;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-size: auto, cover;
    -webkit-background-size: auto, cover;
    -moz-background-size: auto, cover;
    -o-background-size: auto, cover;
    color: var(--text);
}

[class*="ModalFooter-modalFooter-"] {
    background: var(--modal-footer-color);
    background-repeat: repeat, no-repeat;
    background-attachment: fixed, fixed;
    background-position: center center, center center;
    background-size: auto, cover;
    -webkit-background-size: auto, cover;
    -moz-background-size: auto, cover;
    -o-background-size: auto, cover;
    color: var(--text-hover);
    border-top: 1px solid rgb(var(--accent-color));
}

[class*="ModalContent-closeButton-"]:hover {
    color: var(--text-hover);
}

/* INPUT */
[class*="TagInput-internalInput-"] {
    background-color: transparent;
    color: var(--text-hover);
}

[class*="SelectInput-select-"] {
    background: var(--transparency-dark-25) !important;
}

[class*="SelectInput-select-"]:active,
[class*="SelectInput-select-"]:focus {
    background: var(--drop-down-menu-bg) !important;
}

[class*="AutoSuggestInput-suggestionsList-"],
[class*="AutoSuggestInput-suggestionsContainerOpen-"] [class*="AutoSuggestInput-suggestionsContainer-"] {
    background-color: var(--drop-down-menu-bg) !important;
    color: white;
    border: none !important;
}

[class*="AutoSuggestInput-suggestionHighlighted-"] {
    background: var(--transparency-dark-10);
}

[class*="CheckInput-primaryIsChecked-"] {
    border-color: rgb(var(--accent-color)) !important;
    background-color: rgb(var(--accent-color)) !important;
    color: var(--label-text-color) !important;
}

[class*="CheckInput-input-"][class*="CheckInput-isNotChecked-"] {
    background: #fff;
}

/* HEADER */

[class*="PageHeader-header-"] {
    background: var(--transparency-dark-35);
    color: var(--text);
    box-shadow: none;
}

/* SEARCH DROPDOWN HEADER */

[class*="PageHeader-donate-"] {
    color: #c4273c !important;
}

/* SIDE MENU */
[class*="PageSidebar-sidebarContainer-"] {
    background: var(--transparency-dark-25);
}

[class*="PageSidebar-sidebar-"] {
    background-color: transparent;
}
/* ... */

